<resources>
    <string name="app_name">Loystar</string>
    <string name="preference_file_key">co.loystar.loystarbusiness.preference</string>
    <string name="title_activity_merchant_back_office">Home</string>
    <string name="intro1_title">Welcome to Loystar</string>
    <string name="intro2_title">Every sale brings your customer back</string>
    <string name="intro3_title">Make your customers feel loved</string>
    <string name="intro4_title">Marketing made simple</string>
    <string name="intro5_title">Small efforts, Big gains</string>
    <string name="intro1_body">The simplest way to sell your products/services and market to your customers to keep them coming back.</string>
    <string name="intro2_body">Motivate your customers to come back using loyalty programs that gives them reward points every time you sell. You do the selling, we bring  the customers back.</string>
    <string name="intro3_body"><![CDATA[Celebrate their birthdays with a message from you & an offer if you choose. Best of all, you don’t have to track the dates. Loystar takes care of it.]]></string>
    <string name="intro4_body"><![CDATA[It’s never been easier to boost sales on slow days, announce new products & services or invite your customers back with a discount for a festive season.]]></string>
    <string name="intro5_body">Designed to be simple, Loystar puts all these powerful features at your fingertips and you can see the effect of your efforts in weekly and monthly reports.</string>
    <string name="title_activity_authenticator">Loystar</string>
    <string name="unknown_error">Sorry! An unknown error occurred. Please again.</string>
    <string name="no_internet_connection">Connection failed! please check your connection and try again.</string>
    <string name="error_internet_connection_timed_out">Connection timed out. Please check your connection and try again.</string>
    <string name="prompt_email">Email</string>
    <string name="error_login_credentials">Email or Password is incorrect. Please try again!</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="signing_up_msg">Signing up… Please wait.</string>
    <string name="signing_in_msg">Signing in… Please wait.</string>
    <string name="sign_up_btn_text">New to Loystar? Sign Up</string>
    <string name="have_account"><u>HAVE AN ACCOUNT? LOGIN HERE</u></string>
    <string name="email_rationale_text">Please use an email you can access to receive reports.</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="simple_points">SimplePoints</string>
    <string name="stamps_program">StampsProgram</string>
    <string name="simple_points_program_label">Simple Points Program</string>
    <string name="stamps_program_label">Stamps Program</string>
    <string name="logo">logo</string>
    <string name="title_activity_merchant_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_app_intro">intro</string>
    <string name="action_settings">Settings</string>
    <string name="menuitem_sync">Sync now</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="type_of_sale">Type of sale</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="records_to_be_updated_notice">Your records would be updated shortly.</string>
    <string name="records_updated_notice">Records successfully updated.</string>
    <string name="sales_overview">Sales History</string>
    <string name="home_menu">Home</string>
    <string name="record_sale">Sell</string>
    <string name="customers_title">Customers</string>
    <string name="campaigns">Programs</string>
    <string name="title_customer_list">Customers</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="no_customers_found">We could not find any customers for you.</string>
    <string name="add_customer">Add customer</string>
    <string name="customers_count">%1$s Customers </string>
    <string name="customer_count">%1$s Customer </string>
    <string name="confirm_delete_positive">Delete</string>
    <string name="confirm_delete_negative">No don\'t delete!</string>
    <string name="action_search">Search</string>
    <string name="filter_list">Filter list</string>
    <string name="export_list">Export list</string>
    <string name="all_contacts">All contacts</string>
    <string name="last_visit_30_days">Last visit (30 days)</string>
    <string name="male_only">Male only</string>
    <string name="female_only">Female only</string>
    <string name="error_export_failed">Export failed! Please try again.</string>
    <string name="open_file">Open file</string>
    <string-array name="empty_select" />
    <string name="select_date">Select date</string>
    <string name="runtime_permission_is_needed">%1$s Permission Needed</string>
    <string name="permission_camera_rationale_never_ask_again">Permission denied, can\'t take the picture</string>
    <string name="permission_camera_rationale">This app needs Camera permission, please accept to use Camera functionality.</string>
    <string name="permission_storage_rationale">This app needs Storage permission, please accept to use Storage functionality.</string>
    <string name="permission_storage_rationale_never_ask_again">Permission denied, can\'t access storage</string>
    <string name="permission_camera_denied">Camera permission denied</string>
    <string name="permission_storage_denied">Storage permission was denied</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_write_external_storage__denied">External storage permission is denied.</string>
    <string name="permission_write_external_storage_never_ask">External Storage permission was denied with never ask again.</string>
    <string name="permission_write_external_storage_rationale">Storage permission is needed to store this file.</string>
    <string name="permission_contacts_rationale">This app needs Contacts permission, please accept to access contacts on your phone.</string>
    <string name="title_activity_add_new_customer">Add New Customer</string>
    <string name="add_customer_from_contacts">Add from contacts</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="gender">Gender</string>
    <string name="error_add_user">Sorry we couldn\'t add customer. Please try again.</string>
    <string name="male">Male</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="discard">Discard</string>
    <string name="discard_changes_explain">Are you sure you want to discard all changes?</string>
    <string name="permission_read_contacts_never_ask">Permission denied! can\'t access contacts.</string>
    <string name="permission_read_contacts_denied">Contacts permission is denied.</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="birth_date_field_reason">Birthday messages would be sent to your customers.</string>
    <string name="or_caps">OR</string>
    <string name="item_image_contentDescription">Country flag</string>
    <string name="redeem">Redeem</string>
    <string name="redemption_code">Six digit code</string>
    <string name="enter_reset_token"><font size="15">Enter reset code..(the reward code is case sensitive)</font></string>
    <string name="select_customer">Select customer</string>
    <string name="customer_autocomplete_hint">Enter customer name or number</string>
    <string name="select_loyalty_program">Select loyalty program</string>
    <string name="select_one_prompt">Select one</string>
    <string name="image">Image</string>
    <string name="ok">OK</string>
    <string name="pref_connect_apps">Connect Other Apps</string>
    <string name="birthday_messages_and_offers">Birthday Messages &amp; Offers</string>
    <string name="pref_birthday_messages_and_offers_key">pref_birthday_messages_and_offers</string>
    <string name="pref_turn_on_pos_key">turn_on_point_of_sale</string>
    <string name="pref_turn_on_pos_title">Enable Quick Sale</string>
    <string name="pref_product_categories_key">pref_product_categories</string>
    <string name="pref_product_categories_title">My Product Categories</string>
    <string name="pref_my_products_key">pref_my_products</string>
    <string name="pref_my_products_title">My Products / Services</string>
    <string name="account">Account</string>
    <string name="my_products_and_services">My Products and Services</string>
    <string name="try_again">Try again!</string>
    <string name="tigo">Tigo</string>
    <string name="mtn">MTN</string>
    <string name="airtel">Airtel</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="product_category">Product category</string>
    <string name="update_in_progress">Update in progress…</string>
    <string name="sales_belongs_to">This sale belongs to</string>
    <string name="amount_spent_hint">Amount spent by customer</string>
    <string name="continue_label">Continue</string>
    <string name="loyalty_program">Loyalty Program</string>
    <string name="product_loyalty_program_explanation">By setting a loyalty program, customers can target the reward of this program by spending on this product or service.</string>
    <string name="pref_loyalty_programs">Loyalty Programs</string>
    <string name="pref_loyalty_programs_key">pref_loyalty_programs</string>
    <string name="settings_general">settings_general</string>
    <string name="settings_data_and_sync">settings_data_and_sync</string>
    <string name="settings_account">settings_account</string>
    <string name="settings_products_and_services">settings_products_and_services</string>
    <string name="settings_apps">other_apps</string>
    <string name="pref_header_print_options">Print</string>
    <string name="settings_print">settings_print</string>
    <string name="no_more_item">No more item</string>
    <string name="load_field">Load failed</string>
    <string name="share_invoice_via_email">Share Invoice Via Email</string>
    <string name="delete_text">Delete</string>
    <string name="share_to_whatsapp_menu">Share To Whatsapp</string>
    <string name="download_pdf_menu_text">Download Pdf</string>
</resources>