<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share_invoice"
        android:title="@string/share_invoice_via_email"
        android:icon="@drawable/ic_send_black_24dp"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_text"
        android:icon="@drawable/ic_delete"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_share_to_whatsapp"
        android:title="@string/share_to_whatsapp_menu"
        android:icon="@drawable/ic_file_upload"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_download_pdf"
        android:title="@string/download_pdf_menu_text"
        android:icon="@drawable/ic_file_download_black_24dp"
        app:showAsAction="collapseActionView"/>
</menu>