<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.loystar.loystarbusiness.activities.RewardCustomersActivity"
    tools:showIn="@layout/activity_reward_customers">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/redemption_code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/redemption_code"
            style="@style/textViewLabelTextStyle"/>

        <EditText
            android:layout_below="@+id/redemption_code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_reset_token"
            android:maxLength="6"
            android:id="@+id/redemption_code"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_below="@+id/redemption_code"
            android:id="@+id/customer_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_customer"
            style="@style/textViewLabelTextStyle"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customer_label"
            android:hint="@string/customer_autocomplete_hint"
            android:id="@+id/activity_reward_customers_customer_autocomplete"/>

        <TextView
            android:layout_below="@+id/activity_reward_customers_customer_autocomplete"
            android:id="@+id/reward_customers_select_program_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_loyalty_program"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"/>

        <co.loystar.loystarbusiness.utils.ui.buttons.SpinnerButton
            android:layout_below="@+id/reward_customers_select_program_label"
            android:id="@+id/reward_customers_select_program_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:prompt="@string/select_one_prompt"
            android:entries="@array/empty_select"/>

        <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
            android:layout_below="@+id/reward_customers_select_program_spinner"
            android:id="@+id/activity_reward_customers_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/redeem"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

</ScrollView>
