<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:gravity="center">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/layout_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_field"
            />

        <Button
            android:id="@+id/button_retry"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/text_no_more_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_more_item"
        android:gravity="center"
        />
</RelativeLayout>