<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:mContext="co.loystar.loystarbusiness.activities.ProductDetailActivity"
    tools:showIn="@layout/activity_product_detail">

    <LinearLayout
        android:id="@+id/productEditProgressView"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:id="@+id/productEditProgressBar"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:progress="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/update_in_progress"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/productEditFormWrapper"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/thumbnail"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/textViewLabelTextStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="20"
                android:id="@+id/productName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:id="@+id/program_name_char_counter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                style="@style/textViewLabelTextStyle"
                android:layout_marginTop="16dp" />

            <co.loystar.loystarbusiness.utils.ui.CurrencyEditText.CurrencyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/priceOfProduct" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_category"
                style="@style/textViewLabelTextStyle"
                android:layout_marginTop="16dp" />

            <co.loystar.loystarbusiness.utils.ui.buttons.SpinnerButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/productCategoriesSelectSpinner"
                android:layout_gravity="center_horizontal"
                android:prompt="@string/select_one_prompt"
                android:entries="@array/empty_select"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loyalty_program"
                style="@style/textViewLabelTextStyle"
                android:layout_marginTop="16dp" />

            <co.loystar.loystarbusiness.utils.ui.buttons.SpinnerButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/loyaltyProgramsSelectSpinner"
                android:layout_gravity="center_horizontal"
                android:prompt="@string/select_one_prompt"
                android:entries="@array/empty_select"/>

            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/product_loyalty_program_explanation"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
