<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.loystar.loystarbusiness.activities.SaleWithoutPosActivity"
    tools:showIn="@layout/activity_sale_without_pos">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sales_belongs_to"
            style="@style/textViewLabelTextStyle" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_autocomplete_hint"
            android:id="@+id/record_direct_sales_customer_autocomplete"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_spent_hint"
            android:layout_marginTop="15dp"
            style="@style/textViewLabelTextStyle"/>

        <co.loystar.loystarbusiness.utils.ui.CurrencyEditText.CurrencyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:formatWithTextFormatter="false"
            android:id="@+id/record_direct_sales_amount_spent" />

        <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
            android:id="@+id/sale_without_pos_continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_label"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

</ScrollView>
